--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
                     <p>Connecting tribes: how we connected the GRASS GIS database natively to GeoServer</p>
                 </div>
                 <div class="moreinfos">
-                    <p>Talk</p>
+                    <p>Lightning Talk</p>
                     <p>2022-08-24, 12:15–12:20, Room 4</p>
                 </div>
             </a>
@@ -81,6 +81,15 @@
                     <p>2022-08-25, 12:30–13:00, General online</p>
                 </div>
             </a>
+            <a class="event flexchild" href="https://talks.osgeo.org/foss4g-2022/talk/YGVEJP/" target="blank">
+                <div class="maininfo">
+                <p>Making free climate and weather data more usable - status, ideas and products resulting from the research project "FAIR"</p>
+                </div>
+                <div class="moreinfos">
+                    <p>Lightning Talk</p>
+                    <p>2022-08-25, 15:15–15:20, General online</p>
+                </div>
+            </a>
             <a class="event flexchild" href="https://talks.osgeo.org/foss4g-2022/talk/PCD8VQ/" target="blank">
                 <div class="maininfo">
                     <p>The GreenUr project: creating an application in QGIS to manage the impacts of urban green spaces on human health</p>
@@ -88,15 +97,6 @@
                 <div class="moreinfos">
                     <p>Talk</p>
                     <p>2022-08-26, 09:00–09:30, Room 9</p>
-                </div>
-            </a>
-            <a class="event flexchild" href="https://talks.osgeo.org/foss4g-2022/talk/YGVEJP/" target="blank">
-                <div class="maininfo">
-                <p>Making free climate and weather data more usable - status, ideas and products resulting from the research project "FAIR"</p>
-                </div>
-                <div class="moreinfos">
-                    <p>Talk</p>
-                    <p>2022-08-26, 10:00–10:05, Room 4</p>
                 </div>
             </a>
 
