GreenUr talk moved to Room Limonaia

--- a/index.html
+++ b/index.html
@@ -96,7 +96,7 @@
                 </div>
                 <div class="moreinfos">
                     <p>Talk</p>
-                    <p>2022-08-26, 09:00–09:30, Room 9</p>
+                    <p>2022-08-26, 09:00–09:30, Room Limonaia</p>
                 </div>
             </a>
 
