--- a/index.html
+++ b/index.html
@@ -8,8 +8,8 @@
     <main>
         <h1>mundialis at <a href="https://2022.foss4g.org/" target="blank"><img id="f4glogo" src="resources/img/logo-dark.png" alt="FOSS4G 2022 Firenze"></a></h1>
         <div class="flexparent">
-            <a class="event flexchild" href="https://talks.osgeo.org/foss4g-2022-workshops/talk/9QET9V/" target="blank">
-            <!-- <a class="event flexchild" href="https://mmacata.github.io/actinia-introduction/"> -->
+            <!-- <a class="event flexchild" href="https://talks.osgeo.org/foss4g-2022-workshops/talk/9QET9V/" target="blank"> -->
+            <a class="event flexchild" href="https://mundialis.github.io/actinia-introduction/ target="blank">
                 <div class="maininfo">
                     <p>A gentle introduction to actinia:<br> geoprocessing in the cloud</p>
                 </div>
