--- a/news-from-actinia/index.html
+++ b/news-from-actinia/index.html
@@ -587,7 +587,7 @@ Creation of STAC item for result raster map, instance equals username
 * Data Discovery as in openEO (OGC Features)
   * `GET /collections`
   * `GET /collections/{collection_id}`
-* STAC complete implementation, **not** in openEO
+* STAC complete implementation, **not required** in openEO
   * `GET /collections/{collectionId}/items`
   * `GET /collections/{collectionId}/items/{featureId}`
 
