FOSS4G: links and files added

--- a/index.html
+++ b/index.html
@@ -18,7 +18,8 @@
                     <p>2022-08-23, 09:00–13:00, 210</p>
                 </div>
             </a>
-            <a class="event flexchild" href="https://talks.osgeo.org/foss4g-2022-workshops/talk/NCMHSM/" target="blank">
+            <!-- <a class="event flexchild" href="https://talks.osgeo.org/foss4g-2022-workshops/talk/NCMHSM/" target="blank"> -->
+            <a class="event flexchild" href="https://github.com/veroandreo/foss4g2022_grass4rs" target="blank">
                 <div class="maininfo">
                     <p>GRASS GIS for remote sensing data processing and analysis</p>
                 </div>
@@ -27,7 +28,8 @@
                     <p>2022-08-23, 14:00–18:00, 210</p>
                 </div>
             </a>
-            <a class="event flexchild" href="https://talks.osgeo.org/foss4g-2022/talk/EFDUYY/" target="blank">
+            <!-- <a class="event flexchild" href="https://talks.osgeo.org/foss4g-2022/talk/EFDUYY/" target="blank"> -->
+            <a class="event flexchild" href="https://raw.githubusercontent.com/mundialis/foss4g2022/main/geoserver-grass-datastore/2022-08-24-connecting-tribes-geoserver-grass-raster-datastore.pdf" target="blank">
                 <div class="maininfo">
                     <p>Connecting tribes: how we connected the GRASS GIS database natively to GeoServer</p>
                 </div>
@@ -46,7 +48,8 @@
                     <p>2022-08-24, 15:15–15:45, Room Onice</p>
                 </div>
             </a>
-            <a class="event flexchild" href="https://talks.osgeo.org/foss4g-2022/talk/RU7PYN/" target="blank">
+            <!-- <a class="event flexchild" href="https://talks.osgeo.org/foss4g-2022/talk/RU7PYN/" target="blank"> -->
+            <a class="event flexchild" href="https://neteler.github.io/grass-gis-talks-markus/foss4g2022.html" target="blank">
                 <div class="maininfo">
                     <p>State of GRASS GIS</p>
                 </div>
@@ -91,7 +94,8 @@
                     <p>2022-08-25, 15:15–15:20, General online</p>
                 </div>
             </a>
-            <a class="event flexchild" href="https://talks.osgeo.org/foss4g-2022/talk/PCD8VQ/" target="blank">
+            <!-- <a class="event flexchild" href="https://talks.osgeo.org/foss4g-2022/talk/PCD8VQ/" target="blank"> -->
+            <a class="event flexchild" href="https://raw.githubusercontent.com/mundialis/foss4g2022/main/who-greenUr/2022_mundialis_who_greenUr.pdf" target="blank">
                 <div class="maininfo">
                     <p>The GreenUr project: creating an application in QGIS to manage the impacts of urban green spaces on human health</p>
                 </div>
