FOSS4G: Platform_Risk_Assessment file added

--- a/index.html
+++ b/index.html
@@ -76,7 +76,8 @@
                     <p>2022-08-25, 11:30–12:00, General online</p>
                 </div>
             </a>
-            <a class="event flexchild" href="https://talks.osgeo.org/foss4g-2022/talk/A9Q89J/" target="blank">
+            <!-- <a class="event flexchild" href="https://talks.osgeo.org/foss4g-2022/talk/A9Q89J/" target="blank">risk_assessment_platform/FOSS4G2022_Platform_Risk_Assessment.pdf -->
+            <a class="event flexchild" href="https://raw.githubusercontent.com/mundialis/foss4g2022/main/risk_assessment_platform/FOSS4G2022_Platform_Risk_Assessment.pdf" target="blank">
                 <div class="maininfo">
                     <p>Developing a pilot method to measure biodiversity related financial risk at financial portfolio level using Earth Observation and other spatially explicit data</p>
                 </div>
