Added "OSGeo, Persistent Identifiers ..." talk slides

--- a/index.html
+++ b/index.html
@@ -58,12 +58,13 @@
                     <p>2022-08-25, 09:00–09:30, Room Verde</p>
                 </div>
             </a>
-            <a class="event flexchild" href="https://talks.osgeo.org/foss4g-2022-academic-track/talk/MAYYPL/" target="blank">
+            <!-- <a class="event flexchild" href="https://talks.osgeo.org/foss4g-2022-academic-track/talk/MAYYPL/" target="blank"> -->
+            <a class="event flexchild" href="https://zenodo.org/record/7025296" target="blank">
                 <div class="maininfo">
                 <p>OSGeo, Persistent Identifiers and the shape of things to come</p>
                 </div>
                 <div class="moreinfos">
-                    <p>Academic Trac</p>
+                    <p>Academic Track, Lightning Talk</p>
                     <p>2022-08-25, 10:10–10:15, Room Hall 3A</p>
                 </div>
             </a>
